--- a/src/app/products-filter/products-filter.html
+++ b/src/app/products-filter/products-filter.html
@@ -37,7 +37,7 @@
         type="number"
         placeholder="Цена от"
         [min]="0"
-        [max]="maxPrice"
+        [max]="upperPriceSubject.value || maxPrice"
         [ngModel]="lowerPriceSubject.value"
         (ngModelChange)="lowerPriceSubject.next($event)"
       />
