--- a/src/app/products-table/products-table.template.html
+++ b/src/app/products-table/products-table.template.html
@@ -87,7 +87,7 @@
       </mat-cell>
     </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns" />
+    <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" />
     <mat-row *matRowDef="let row; columns: displayedColumns" />
   </mat-table>
 
